build/antlr4cpp_generated_src/antlrcpptest/HistoryParser.cpp

// Generated from /media/loic/Data/Users/Loïc/Documents/poker_stats_lb/grammar/HistoryParser.g4 by ANTLR 4.7.1


#include "HistoryParserListener.h"
#include "HistoryParserVisitor.h"

#include "HistoryParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

HistoryParser::HistoryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HistoryParser::~HistoryParser() {
  delete _interpreter;
}

std::string HistoryParser::getGrammarFileName() const {
  return "HistoryParser.g4";
}

const std::vector<std::string>& HistoryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HistoryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FichierContext ------------------------------------------------------------------

HistoryParser::FichierContext::FichierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HistoryParser::HandContext *> HistoryParser::FichierContext::hand() {
  return getRuleContexts<HistoryParser::HandContext>();
}

HistoryParser::HandContext* HistoryParser::FichierContext::hand(size_t i) {
  return getRuleContext<HistoryParser::HandContext>(i);
}


size_t HistoryParser::FichierContext::getRuleIndex() const {
  return HistoryParser::RuleFichier;
}

void HistoryParser::FichierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFichier(this);
}

void HistoryParser::FichierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFichier(this);
}


antlrcpp::Any HistoryParser::FichierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitFichier(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::FichierContext* HistoryParser::fichier() {
  FichierContext *_localctx = _tracker.createInstance<FichierContext>(_ctx, getState());
  enterRule(_localctx, 0, HistoryParser::RuleFichier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(187); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(186);
      hand();
      setState(189); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HistoryParser::WINAMAXPOKER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HandContext ------------------------------------------------------------------

HistoryParser::HandContext::HandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryParser::HandHeaderContext* HistoryParser::HandContext::handHeader() {
  return getRuleContext<HistoryParser::HandHeaderContext>(0);
}

HistoryParser::PositionsContext* HistoryParser::HandContext::positions() {
  return getRuleContext<HistoryParser::PositionsContext>(0);
}

HistoryParser::JeuContext* HistoryParser::HandContext::jeu() {
  return getRuleContext<HistoryParser::JeuContext>(0);
}

HistoryParser::SummarySectionContext* HistoryParser::HandContext::summarySection() {
  return getRuleContext<HistoryParser::SummarySectionContext>(0);
}


size_t HistoryParser::HandContext::getRuleIndex() const {
  return HistoryParser::RuleHand;
}

void HistoryParser::HandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHand(this);
}

void HistoryParser::HandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHand(this);
}


antlrcpp::Any HistoryParser::HandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitHand(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::HandContext* HistoryParser::hand() {
  HandContext *_localctx = _tracker.createInstance<HandContext>(_ctx, getState());
  enterRule(_localctx, 2, HistoryParser::RuleHand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(191);
    handHeader();
    setState(192);
    positions();
    setState(193);
    jeu();
    setState(194);
    summarySection();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HandHeaderContext ------------------------------------------------------------------

HistoryParser::HandHeaderContext::HandHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryParser::FirstLineContext* HistoryParser::HandHeaderContext::firstLine() {
  return getRuleContext<HistoryParser::FirstLineContext>(0);
}

HistoryParser::SecondLineContext* HistoryParser::HandHeaderContext::secondLine() {
  return getRuleContext<HistoryParser::SecondLineContext>(0);
}


size_t HistoryParser::HandHeaderContext::getRuleIndex() const {
  return HistoryParser::RuleHandHeader;
}

void HistoryParser::HandHeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHandHeader(this);
}

void HistoryParser::HandHeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHandHeader(this);
}


antlrcpp::Any HistoryParser::HandHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitHandHeader(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::HandHeaderContext* HistoryParser::handHeader() {
  HandHeaderContext *_localctx = _tracker.createInstance<HandHeaderContext>(_ctx, getState());
  enterRule(_localctx, 4, HistoryParser::RuleHandHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    firstLine();
    setState(197);
    secondLine();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JeuContext ------------------------------------------------------------------

HistoryParser::JeuContext::JeuContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryParser::AnteblindSectionContext* HistoryParser::JeuContext::anteblindSection() {
  return getRuleContext<HistoryParser::AnteblindSectionContext>(0);
}

HistoryParser::PreflopSectionContext* HistoryParser::JeuContext::preflopSection() {
  return getRuleContext<HistoryParser::PreflopSectionContext>(0);
}

HistoryParser::FlopSectionContext* HistoryParser::JeuContext::flopSection() {
  return getRuleContext<HistoryParser::FlopSectionContext>(0);
}

HistoryParser::TurnSectionContext* HistoryParser::JeuContext::turnSection() {
  return getRuleContext<HistoryParser::TurnSectionContext>(0);
}

HistoryParser::RiverSectionContext* HistoryParser::JeuContext::riverSection() {
  return getRuleContext<HistoryParser::RiverSectionContext>(0);
}

HistoryParser::ShowdownSectionContext* HistoryParser::JeuContext::showdownSection() {
  return getRuleContext<HistoryParser::ShowdownSectionContext>(0);
}


size_t HistoryParser::JeuContext::getRuleIndex() const {
  return HistoryParser::RuleJeu;
}

void HistoryParser::JeuContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJeu(this);
}

void HistoryParser::JeuContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJeu(this);
}


antlrcpp::Any HistoryParser::JeuContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitJeu(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::JeuContext* HistoryParser::jeu() {
  JeuContext *_localctx = _tracker.createInstance<JeuContext>(_ctx, getState());
  enterRule(_localctx, 6, HistoryParser::RuleJeu);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(199);
    anteblindSection();
    setState(200);
    preflopSection();
    setState(202);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryParser::FLOP) {
      setState(201);
      flopSection();
    }
    setState(205);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryParser::TURN) {
      setState(204);
      turnSection();
    }
    setState(208);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryParser::RIVER) {
      setState(207);
      riverSection();
    }
    setState(211);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HistoryParser::SHOWDOWN) {
      setState(210);
      showdownSection();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FirstLineContext ------------------------------------------------------------------

HistoryParser::FirstLineContext::FirstLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HistoryParser::FirstLineContext::WINAMAXPOKER() {
  return getToken(HistoryParser::WINAMAXPOKER, 0);
}

std::vector<tree::TerminalNode *> HistoryParser::FirstLineContext::MINUS() {
  return getTokens(HistoryParser::MINUS);
}

tree::TerminalNode* HistoryParser::FirstLineContext::MINUS(size_t i) {
  return getToken(HistoryParser::MINUS, i);
}

HistoryParser::GameInfoContext* HistoryParser::FirstLineContext::gameInfo() {
  return getRuleContext<HistoryParser::GameInfoContext>(0);
}

HistoryParser::HandIdContext* HistoryParser::FirstLineContext::handId() {
  return getRuleContext<HistoryParser::HandIdContext>(0);
}

HistoryParser::TypePlayContext* HistoryParser::FirstLineContext::typePlay() {
  return getRuleContext<HistoryParser::TypePlayContext>(0);
}

HistoryParser::DateContext* HistoryParser::FirstLineContext::date() {
  return getRuleContext<HistoryParser::DateContext>(0);
}


size_t HistoryParser::FirstLineContext::getRuleIndex() const {
  return HistoryParser::RuleFirstLine;
}

void HistoryParser::FirstLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFirstLine(this);
}

void HistoryParser::FirstLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFirstLine(this);
}


antlrcpp::Any HistoryParser::FirstLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitFirstLine(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::FirstLineContext* HistoryParser::firstLine() {
  FirstLineContext *_localctx = _tracker.createInstance<FirstLineContext>(_ctx, getState());
  enterRule(_localctx, 8, HistoryParser::RuleFirstLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(213);
    match(HistoryParser::WINAMAXPOKER);
    setState(214);
    match(HistoryParser::MINUS);
    setState(215);
    gameInfo();
    setState(216);
    match(HistoryParser::MINUS);
    setState(217);
    handId();
    setState(218);
    match(HistoryParser::MINUS);
    setState(219);
    typePlay();
    setState(220);
    match(HistoryParser::MINUS);
    setState(221);
    date();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameInfoContext ------------------------------------------------------------------

HistoryParser::GameInfoContext::GameInfoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HistoryParser::TypeOfGameContext* HistoryParser::GameInfoContext::typeOfGame() {
  return getRuleContext<HistoryParser::TypeOfGameContext>(0);
}

HistoryParser::NameOfGameContext* HistoryParser::GameInfoContext::nameOfGame() {
  return getRuleContext<HistoryParser::NameOfGameContext>(0);
}

HistoryParser::BuyinContext* HistoryParser::GameInfoContext::buyin() {
  return getRuleContext<HistoryParser::BuyinContext>(0);
}

HistoryParser::LevelContext* HistoryParser::GameInfoContext::level() {
  return getRuleContext<HistoryParser::LevelContext>(0);
}


size_t HistoryParser::GameInfoContext::getRuleIndex() const {
  return HistoryParser::RuleGameInfo;
}

void HistoryParser::GameInfoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameInfo(this);
}

void HistoryParser::GameInfoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameInfo(this);
}


antlrcpp::Any HistoryParser::GameInfoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitGameInfo(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::GameInfoContext* HistoryParser::gameInfo() {
  GameInfoContext *_localctx = _tracker.createInstance<GameInfoContext>(_ctx, getState());
  enterRule(_localctx, 10, HistoryParser::RuleGameInfo);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(223);
    typeOfGame();
    setState(224);
    nameOfGame();
    setState(225);
    buyin();
    setState(226);
    level();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeOfGameContext ------------------------------------------------------------------

HistoryParser::TypeOfGameContext::TypeOfGameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HistoryParser::TypeOfGameContext::TOURNAMENT() {
  return getToken(HistoryParser::TOURNAMENT, 0);
}


size_t HistoryParser::TypeOfGameContext::getRuleIndex() const {
  return HistoryParser::RuleTypeOfGame;
}

void HistoryParser::TypeOfGameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeOfGame(this);
}

void HistoryParser::TypeOfGameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeOfGame(this);
}


antlrcpp::Any HistoryParser::TypeOfGameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitTypeOfGame(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::TypeOfGameContext* HistoryParser::typeOfGame() {
  TypeOfGameContext *_localctx = _tracker.createInstance<TypeOfGameContext>(_ctx, getState());
  enterRule(_localctx, 12, HistoryParser::RuleTypeOfGame);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(228);
    match(HistoryParser::TOURNAMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameOfGameContext ------------------------------------------------------------------

HistoryParser::NameOfGameContext::NameOfGameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HistoryParser::NameOfGameContext::QUOTE() {
  return getTokens(HistoryParser::QUOTE);
}

tree::TerminalNode* HistoryParser::NameOfGameContext::QUOTE(size_t i) {
  return getToken(HistoryParser::QUOTE, i);
}

std::vector<tree::TerminalNode *> HistoryParser::NameOfGameContext::MOT() {
  return getTokens(HistoryParser::MOT);
}

tree::TerminalNode* HistoryParser::NameOfGameContext::MOT(size_t i) {
  return getToken(HistoryParser::MOT, i);
}


size_t HistoryParser::NameOfGameContext::getRuleIndex() const {
  return HistoryParser::RuleNameOfGame;
}

void HistoryParser::NameOfGameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNameOfGame(this);
}

void HistoryParser::NameOfGameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNameOfGame(this);
}


antlrcpp::Any HistoryParser::NameOfGameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitNameOfGame(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::NameOfGameContext* HistoryParser::nameOfGame() {
  NameOfGameContext *_localctx = _tracker.createInstance<NameOfGameContext>(_ctx, getState());
  enterRule(_localctx, 14, HistoryParser::RuleNameOfGame);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(230);
    match(HistoryParser::QUOTE);
    setState(232); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(231);
      match(HistoryParser::MOT);
      setState(234); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HistoryParser::MOT);
    setState(236);
    match(HistoryParser::QUOTE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuyinContext ------------------------------------------------------------------

HistoryParser::BuyinContext::BuyinContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HistoryParser::BuyinContext::BUYIN() {
  return getToken(HistoryParser::BUYIN, 0);
}

HistoryParser::BuyValueContext* HistoryParser::BuyinContext::buyValue() {
  return getRuleContext<HistoryParser::BuyValueContext>(0);
}

std::vector<tree::TerminalNode *> HistoryParser::BuyinContext::EURO() {
  return getTokens(HistoryParser::EURO);
}

tree::TerminalNode* HistoryParser::BuyinContext::EURO(size_t i) {
  return getToken(HistoryParser::EURO, i);
}

tree::TerminalNode* HistoryParser::BuyinContext::PLUS() {
  return getToken(HistoryParser::PLUS, 0);
}

HistoryParser::RakeBuyValueContext* HistoryParser::BuyinContext::rakeBuyValue() {
  return getRuleContext<HistoryParser::RakeBuyValueContext>(0);
}


size_t HistoryParser::BuyinContext::getRuleIndex() const {
  return HistoryParser::RuleBuyin;
}

void HistoryParser::BuyinContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuyin(this);
}

void HistoryParser::BuyinContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HistoryParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuyin(this);
}


antlrcpp::Any HistoryParser::BuyinContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HistoryParserVisitor*>(visitor))
    return parserVisitor->visitBuyin(this);
  else
    return visitor->visitChildren(this);
}

HistoryParser::BuyinContext* HistoryParser::buyin() {
  BuyinContext *_localctx = _tracker.createInstance<BuyinContext>(_ctx, getState());
  enterRule(_localctx, 16, HistoryParser::RuleBuyin);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(238);
    match(HistoryParser::BUYIN);
    setState(239);
    buyValue();
    setState(240);
    match(HistoryParser::EURO);
    setState(241);
    match(HistoryParser::PLUS);
    setState(242);
    rakeBuyValue();
    setState(243);
    match(HistoryParser::EURO);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
